Fixed logo text overflowing

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -13,6 +13,31 @@
   margin: 0 auto;
 }
 
+/* Truncate the navbar title text when the width is small */
+.navbar__title {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 400px) {
+  .navbar__title {
+    max-width: 180px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .navbar__title {
+    max-width: 120px;
+  }
+}
+@media screen and (max-width: 280px) {
+  .navbar__title {
+    max-width: 100px;
+  }
+}
+
+
 .footer__logo {
   max-width: 4rem;
   max-height: 4rem;
